--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,4 +1,4 @@
-.popup__button {
+.form__button {
    width: 358px;
    height: 50px;
    background: #000000;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 700px) {
-   .popup__button {
+   .form__button {
       width: 238px;
       height: 46px;
       font-size: 14px;
@@ -19,7 +19,7 @@
    }
 }
 
-.popup__button:hover {
+.form__button:hover {
    opacity: 0.8;
    cursor: pointer;
    transition: all 250ms ease-out;
