--- a/blocks/form/__input-job/form__input-job.css
+++ b/blocks/form/__input-job/form__input-job.css
@@ -1,17 +1,18 @@
-.popup__field1 {
+.form__input-job {
    width: 100%;
    font-size: 14px;
    line-height: 17px;
    color: #000000;
    border: none;
    border-bottom: 1px solid rgb(0, 0, 0, .2);
-   margin-bottom: 17px;
+   margin-bottom: 48.5px;
    padding: 11px 0;
    outline:none;
 }
 
 @media screen and (max-width: 700px) {
-   .popup__field1 {
+   .form__input-job {
       padding: 11px 0;
+      margin-bottom: 45px;
    }
 }
