--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,13 +1,21 @@
 .profile__info {
-   position: relative;
-   width: min-content;
-   max-width: 90%;
-   padding-top: 10px;
+   display: grid;
+   justify-items:stretch;
+   align-items: center;
+   align-content: center;
+   justify-content: start;
+   gap: 4px 20px;
+   grid-template: 
+       "name button" auto
+       "job job" auto
+       /max-content min-content;
 }
 
 @media screen and (max-width: 700px) {
    .profile__info {
       padding: 27px 0 34px 0;
       width: 100%;
+      justify-content: center;
+      gap: 6px 10px;
    }
 }
