--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -2,11 +2,10 @@
    width: max-content;
    max-width: 500px;
    margin: 0;
+   grid-area: job;
    font-size: 18px;
    line-height: 22px;
    color: #FFFFFF;
-   text-align: left;
-   flex-basis: min-content;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
@@ -20,7 +19,7 @@
 
 @media screen and (max-width: 700px) {
    .profile__job {
-      width: 100%;
+      max-width: 230px;
       font-size: 14px;
       line-height: 17px;
       text-align: center;
