--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,12 @@
 .profile__name {
    margin: 0;
-   margin-bottom: 7px;
    width: max-content;
    max-width: 500px;
+   grid-area: name;
    font-weight: 500;
    font-size: 42px;
    line-height: 114%;
    color: #FFFFFF;
-   flex-basis: min-content;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
@@ -21,11 +20,13 @@
 
 @media screen and (max-width: 700px) {
    .profile__name {
-      width: 78%;
+      max-width: 230px;
       font-size: 27px;
       line-height: 33px;
       text-align: center;
-      margin: 0 auto;
-      margin-bottom: 7px;
+      margin: auto;
+      margin-left: 22px;
+      justify-self: center;
+  
    }
 }
