--- a/blocks/element/__place/element__place.css
+++ b/blocks/element/__place/element__place.css
@@ -1,10 +1,8 @@
 .element__place {
    width: 282px;
-   height: 79px;
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding-left: 21px;
-   padding-right: 20px;
+   padding: 25px 20px 25px 21px ;
    box-sizing:border-box;
 }
