--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,6 +1,7 @@
 .form__button {
    width: 358px;
    height: 50px;
+   border: none;
    background: #000000;
    border-radius: 2px;
    font-size: 18px;
@@ -8,6 +9,7 @@
    text-align: center;
    color: #FFFFFF;
    transition: all 250ms ease-out;
+   padding: 0;
 }
 
 @media screen and (max-width: 700px) {
