--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,13 +1,21 @@
 .profile__button {
    grid-area: button;
    width: 24px;
+   height: 24px;
    transition: all 250ms ease-out;
-   align-items: center;
+   background-color: #000000;
+   background-image: url(../../../images/Edit-Button.svg);
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+  
+
 }
 
 @media screen and (max-width: 700px) {
    .profile__button {
       width: 18px;
+      height: 18px;
    }
 }
 
