--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -11,6 +12,7 @@
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__add-plus/profile__add-plus.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__title/element__title.css);
@@ -25,6 +27,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/form/form.css);
-@import url(../blocks/form/__input-name/form__input-name.css);
-@import url(../blocks/form/__input-job/form__input-job.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__input/_place/form__input_place_name.css);
+@import url(../blocks/form/__input/_place/form__input_place_job.css);
 @import url(../blocks/form/__button/form__button.css);
