--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -10,6 +10,7 @@
    color: #FFFFFF;
    transition: all 250ms ease-out;
    padding: 0;
+   margin-top: 31.5px;
 }
 
 @media screen and (max-width: 700px) {
@@ -18,6 +19,7 @@
       height: 46px;
       font-size: 14px;
       line-height: 17px;
+      margin-top: 28px;
    }
 }
 
