--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,7 +11,6 @@
 @media screen and (max-width: 700px) {
    .popup__container {
       width: 282px;
-      height: 322px;
-      padding: 25px 22px;
+      padding: 25px 22px 8px 22px;
    }
 }
