--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,7 +4,7 @@
    height: 50px;
    border: 2px solid #FFFFFF;
    border-radius: 2px;
-   background-color: #00000000;
+   background-color: rgba(0, 0, 0, 0);
    transition: all 250ms ease-out; 
 }
 
