--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -3,7 +3,7 @@
    width: 24px;
    height: 24px;
    transition: all 250ms ease-out;
-   background-color: #000000;
+   background-color: rgba(0, 0, 0, 0);;
    background-image: url(../../../images/Edit-Button.svg);
    background-repeat: no-repeat;
    background-position: center;
