--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,7 @@
 .element__image {
-   width: 100%;
-   object-fit: cover;
+    width: 100%;
+    height: 282px;
+    object-fit: cover;
+    object-position: center;
+    cursor: pointer;
 }
