--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/element/__place/element__place.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__icon/element__icon.css);
+@import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/popup/popup.css);
@@ -26,6 +27,17 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup-el/popup-el.css);
+@import url(../blocks/popup-el/__container/popup-el__container.css);
+@import url(../blocks/popup-el/__title/popup-el__title.css);
+@import url(../blocks/popup-el/__close/popup-el__close.css);
+@import url(../blocks/popup-el/_opened/popup-el_opened.css);
+@import url(../blocks/popup-photo/popup-photo.css);
+@import url(../blocks/popup-photo/__subtitle/popup-photo__subtitle.css);
+@import url(../blocks/popup-photo/__item/popup-photo__item.css);
+@import url(../blocks/popup-photo/__container/popup-photo__container.css);
+@import url(../blocks/popup-photo/__close/popup-photo__close.css);
+@import url(../blocks/popup-photo/_opened/popup-photo_opened.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input/_place/form__input_place_name.css);
