--- a/blocks/popup-photo/popup-photo.css
+++ b/blocks/popup-photo/popup-photo.css
@@ -1,6 +1,6 @@
 .popup-photo {
    position: fixed;
-   display: none;
+   display: flex;
    width: 100%;
    min-height: 100%;
    top: 0;
@@ -8,4 +8,8 @@
    background: rgba(0, 0, 0, .9);
    justify-content: center;
    align-items: center;
+
+   visibility: hidden;
+   opacity: 0;
+   transition: visibility 0s, opacity 0.3s linear;
 }
