--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,15 @@
 .popup {
    position: fixed;
-   display: none;
+   display: flex;
    width: 100%;
-   min-height: 100%;
-   top: 0;
-   left: 0;
+   height: 100vh;
    background: rgba(0, 0, 0, .5);
    justify-content: center;
    align-items: center; 
+   top: 0;
+   left: 0;
+   
+   visibility: hidden;
+   opacity: 0;
+   transition: visibility 0s, opacity 0.3s linear;
 }
