--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,6 +1,5 @@
-.popup-photo__container {
+.popup__content {
    position: relative;
    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
    box-sizing: border-box;
 }
-
