--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,4 +1,4 @@
-.popup-photo__item {
+.popup__item {
    max-width: 75vw;
    max-height: 75vh;
    object-fit: contain;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 700px) {
-   .popup-photo__item {
+   .popup__item {
       height:min-content;
    }
 }
