--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,7 +2,7 @@
    position: fixed;
    display: flex;
    width: 100%;
-   height: 100vh;
+   height: 100%;
    background: rgba(0, 0, 0, .5);
    justify-content: center;
    align-items: center;
