--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,13 +3,13 @@
    display: flex;
    width: 100%;
    height: 100%;
-   background: rgba(0, 0, 0, .5);
+   background-color: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    top: 0;
    left: 0;
    
    visibility: hidden;
-   opacity: 0;
+   opacity: 0.5;
    transition: visibility 0s, opacity 0.3s linear;
 }
