--- a/pages/index.css
+++ b/pages/index.css
@@ -38,5 +38,6 @@
 @import url(../blocks/form/__button/_disabled/form__button_disabled.css);
 @import url(../blocks/popup-error/popup-error.css);
 @import url(../blocks/popup-error/_visible/popup-error_visible.css);
+@import url(../blocks/popup/_opacity/popup_opacity.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
