--- a/main.css
+++ b/main.css
@@ -5,22 +5,24 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);box-sizing:border-box;padding:44px 0 37px;width:100%}@media screen and (max-width:700px){.header{padding:28px 0}}
 .header__logo{margin:0;width:142px}@media screen and (max-width:700px){.header__logo{margin-left:18px;width:103.74px}}
 .main{flex:1 0 auto;margin:auto;width:100%}
-.profile{align-items:center;display:grid;grid-template-columns:150px 1fr 150px;padding:39.25px 0 51px}@media screen and (max-width:700px){.profile{display:flex;flex-direction:column;justify-content:flex-start;padding:40.5px 0 36px}}
+.profile{align-items:center;display:grid;grid-template-columns:150px 1fr 150px;padding:39.25px 0 51px;position:relative}@media screen and (max-width:700px){.profile{display:flex;flex-direction:column;justify-content:flex-start;padding:40.5px 0 36px}}
 .profile__name{color:#fff;font-size:42px;font-weight:500;grid-area:name;line-height:114%;margin:0;max-width:500px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:-moz-max-content;width:max-content}@media screen and (max-width:910px){.profile__name{max-width:300px}}@media screen and (max-width:700px){.profile__name{font-size:27px;justify-self:center;line-height:33px;margin:auto auto auto 22px;max-width:230px;text-align:center}}
 .profile__job{color:#fff;font-size:18px;grid-area:job;line-height:22px;margin:0;max-width:500px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:-moz-max-content;width:max-content}@media screen and (max-width:910px){.profile__job{max-width:300px}}@media screen and (max-width:700px){.profile__job{font-size:14px;line-height:17px;margin:auto;max-width:230px;text-align:center}}
 .profile__info{align-content:center;align-items:center;display:grid;gap:4px 20px;grid-template:"name button" auto "job job" auto/max-content min-content;justify-content:start;justify-items:stretch}@media screen and (max-width:700px){.profile__info{gap:6px 10px;justify-content:center;padding:27px 0 34px;width:100%}}
 .profile__button{background-color:transparent;background-image:url(af236f6cf67005f1d7aa.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;grid-area:button;height:24px;transition:all .25s ease-out;width:24px}@media screen and (max-width:700px){.profile__button{height:18px;width:18px}}.profile__button:hover{cursor:pointer;opacity:.6;transition:all .25s ease-out}
-.profile__avatar{margin-right:30px;width:120px}@media screen and (max-width:700px){.profile__avatar{margin-right:0}}
+.profile__avatar{border-radius:50%;height:120px;margin-right:30px;-o-object-fit:cover;object-fit:cover;width:120px}@media screen and (max-width:700px){.profile__avatar{margin-right:0}}
+.profile__avatar-button{background-color:#000;background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;border:none;border-radius:50%;height:122px;left:-1px;opacity:0;padding:0;position:absolute;top:39px;transition:all .3s ease;width:122px;button:focus{outline:none}}.profile__avatar-button:hover{opacity:.8}@media screen and (max-width:700px){.profile__avatar-button{left:100px}}
 .profile__add-button{background-color:transparent;border:2px solid #fff;border-radius:2px;box-sizing:border-box;height:50px;transition:all .25s ease-out;width:150px}@media screen and (max-width:700px){.profile__add-button{max-width:282px;width:100%}}.profile__add-button:hover{cursor:pointer;opacity:.6;transition:all .25s ease-out}
 .profile__add-plus{width:22px}@media screen and (max-width:700px){.profile__add-plus{width:16px}}
 .elements{display:grid;gap:20px 17px;grid-template-columns:repeat(3,1fr);justify-content:center;justify-items:center;width:100%}@media screen and (max-width:910px){.elements{gap:20px;grid-template-columns:repeat(2,min-content)}}@media screen and (max-width:700px){.elements{grid-template-columns:repeat(1,min-content)}}
 .element{align-items:center;background:#fff;border-radius:10px;box-sizing:border-box;display:flex;flex-direction:column;justify-content:space-between;overflow:hidden;position:relative;width:282px}
 .element__title{color:#000;flex-basis:195px;font-size:24px;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.element__place{align-items:center;box-sizing:border-box;display:flex;justify-content:space-between;padding:25px 20px 25px 21px;width:282px}
+.element__place{align-items:center;box-sizing:border-box;display:flex;justify-content:space-between;padding:22px 20px 22px 21px;width:282px}
 .element__image{cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;width:100%}
 .element__icon{background-color:#fff;background-image:url(1ad06e85f169668a1f36.svg);background-position:50%;background-repeat:no-repeat;background-size:cover;display:block;height:19px;transition:all .25s ease-out;width:22px}.element__icon:hover{cursor:pointer;opacity:.5;transition:all .25s ease-out}
 .element__icon_active{background-image:url(35948469632d0421d697.svg)}
 .element__delete{color:#fff;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;width:18px}
+.element__number{color:#000;display:block;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin-top:3px;text-align:center;width:22px}
 .footer{display:flex;justify-content:space-between;padding:67px 0 60px;width:100%}@media screen and (max-width:700px){.footer{padding:48px 0 36px}}
 .footer__text{color:#545454;font-size:18px;line-height:22px;margin:0}@media screen and (max-width:700px){.footer__text{font-size:14px;line-height:17px;margin-left:10px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:.5;position:fixed;top:0;transition:visibility 0s,opacity .3s linear;visibility:hidden;width:100%}
@@ -41,4 +43,5 @@
 .popup_opacity{background-color:rgba(0,0,0,.9)}
 .popup__close{position:absolute;right:-40px;top:-40px;transition:all .25s ease-out;width:32px}@media screen and (max-width:700px){.popup__close{right:0;top:-37px;width:20px}}.popup__close:hover{cursor:pointer;opacity:.6;transition:all .25s ease-out}
 .popup_opened{opacity:1;visibility:visible}
+.popup__title_approval{margin:0 0 23px}
 
