--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,6 +11,7 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__add-plus/profile__add-plus.css);
 @import url(../blocks/elements/elements.css);
@@ -21,6 +22,7 @@
 @import url(../blocks/element/__icon/element__icon.css);
 @import url(../blocks/element/__icon/_active/element__icon_active.css);
 @import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__number/element__number.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
 @import url(../blocks/popup/popup.css);
@@ -41,3 +43,4 @@
 @import url(../blocks/popup/_opacity/popup_opacity.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__title/_approval/popup__title_approval.css);
